Adding recent Deutsche Bank expirence and updating the skills

--- a/index.html
+++ b/index.html
@@ -47,19 +47,17 @@
                         <a href="mailto:name@email.com">karthik.techie08@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
-                        With a solid background as a Data Scientist for over 6 years, I bring a deep passion for
-                        leveraging data analytics to address real-world business challenges. My expertise lies in
-                        effectively deploying machine learning techniques to uncover patterns and derive valuable
-                        insights from complex datasets. I am skilled at translating technical requirements into
-                        actionable business specifications, streamlining existing processes, and delivering solutions
-                        that prioritize user needs. Connecting with professionals is a genuine pleasure of mine, and I
-                        invite you to reach out for engaging discussions on topics ranging from technology advancements
-                        to innovative business ideas or even cricket. I am eager to forge new professional connections
-                        and engage in intellectually stimulating conversations. Let's connect and explore the exciting
-                        intersection of data, business, and shared interests.
+                        With a solid background as a Data Scientist and Product Ownership for over 7 years, I bring a deep passion for
+                        leveraging data analytics to address real-world business challenges. My expertise lies in effectively deploying 
+                        machine learning techniques to uncover patterns and derive valuable insights from complex datasets. I am skilled 
+                        at translating technical requirements into actionable business specifications, streamlining existing processes, 
+                        and delivering solutions that prioritize user needs. Connecting with professionals is a genuine pleasure of mine, 
+                        and I invite you to reach out for engaging discussions on topics ranging from technology advancements to innovative 
+                        business ideas, diving or cricket. I am eager to forge new professional connections and engage in intellectually 
+                        stimulating conversations. Let's connect and explore the exciting intersection of data, business, and shared interests.
                         <br>
                         <br>
-                        You can also view my more formal and detailed resume <a href="https://drive.google.com/file/d/1RZs5c8QFd1TfZmfeleUX1KJfrSShPX6C/view?usp=sharing">[here]</a>.
+                        You can also view my more formal and detailed resume <a href="https://drive.google.com/file/d/1228zLIPSiwyrrJZeNeq0YUa8_O0xoWMS/view?usp=sharing">[here]</a>.
 
                     </p>
                     <div class="social-icons">
