Changes to index.html

--- a/index.html
+++ b/index.html
@@ -97,6 +97,34 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Professional Experience</h2>
+                    
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Consultant Product Owner | Deutsche Bank, Frankfurt, Germany</h3>
+                            <br></br>
+                            <ul><h5>Regulatory Framework Implementation</h5>
+                                <li>Spearheaded the Basel IV project, implementing flooring logic for the Full Standard Approach 
+                                    (FSA), ensuring alignment with global financial standards and reducing operational risk.
+                                </li>
+                                <li> Designed and implemented advanced Financial Methodologies: 
+                                    <ul>
+                                        <li>Leverage Exposure (LE) Calculations, optimizing risk-adjusted financial assessments.</li>
+                                        <li>Expected Loss Shortfall: Contributed to accurate risk modeling and capital adequacy projections.</li>
+                                        <li>Assessing the impact of High-Quality Liquid Assets (HQLA) on leverage exposure and net income before tax 
+                                            (NIBT), improving liquidity risk management frameworks.</li>
+                                    </ul>
+                                </li>
+                                <li>Product Ownership and Development: Defined and prioritized product roadmaps, ensuring alignment with stakeholder 
+                                    needs and regulatory timelines. Collaborated cross-functionally with engineering, finance, and risk teams to deliver 
+                                    impactful solutions.    
+                                </li>
+                                <li>Strategic Delivery: Championed agile methodologies to deliver high-quality products within stringent deadlines, 
+                                    ensuring compliance with evolving regulatory standards.
+                                </li> 
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Feb 2023 - Present</span></div>
+                    </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -176,7 +204,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Sept 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept 2021 - Oct 2023</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -303,10 +331,11 @@
                         <div class="flex-grow-1">
                               <ul>
                                 <li><b>Languages :</b> Python, SQL, R, HTML/CSS</li>
-                                <li><b>Reporting Tools :</b> Tableau, Power BI, Microsoft Excel</li>
+                                <li><b>Reporting Tools :</b> Tableau, Power BI, SAS Visual Analytics, Microsoft Excel</li>
                                 <li><b>Libraries :</b> NLTK, Scikit-Learn, SciPy, Pandas, NumPy, Seaborn, TensorFlow</li>
-                                <li><b>Big Data and DW Tools: :</b> MySQL, PostgreSQL, AWS Athena, Kafka, SAP Data Services</li>
-                                <li><b>Statistics/ML :</b> Linear/Logistic Regression, Classification, Clustering, Sentiment Analysis, NLP, CART</li>
+                                <li><b>Big Data and DW Tools: :</b> MySQL, Oracle DB, PostgreSQL, AWS S3, Athena, Apache Kafka, Google BigQuery</li>
+                                <li><b>Statistics/ML :</b> CART, NLP, Clustering, Sentiment Analysis, Deep Learning, Time Series Analysis</li>
+                                <li><b>Cloud Environment:</b> Amazon Web Services, Google Cloud Platform, Docker, Kubernets, Git</li>
                               </ul>
                         </div>
                       </div>
@@ -335,10 +364,11 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills & Interests</h2>
                     <ul>
+                      <li><b> Certified Open Water Diver, Padi Nov’24.</b></li>
+                      <li><b> Trekking at 13,500 feet at Brahmatal, Greater Himalayas, India.</b></li>
                       <li><b> Creative Lead at Google Student Ambassador Program.</b></li>
                       <li><b> Diploma in VLSI conducted by ekLakshya VLSI R&D Center Pvt. Ltd.</b></li>
                       <li><b> Runner Up in the National Conference on "Recent Technologies in Electronics and Communication" Techxellence – 2016</b></li>
-                      <li><b> Trekking at 13,500 feet at Brahmatal, Greater Himalayas, India.</b></li>
                       <li><b> Language Skills:</b>
                           <br>English – <b>Professional Level</b>
                           <br>German – <b>A2 Level</b></li>
