Updating the skills and the email address

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     </h1>
                     <div class="subheading mb-5">
                         Frankfurt, DE ·
-                        <a href="mailto:name@email.com">karthik.techie08@gmail.com</a>
+                        <a href="mailto:name@email.com">karthikmallikarjun08@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
-                        With a solid background as a Data Scientist and Product Ownership for over 7 years, I bring a deep passion for
+                        With a solid background as a Data Scientist and Product Ownership for over 8 years, I bring a deep passion for
                         leveraging data analytics to address real-world business challenges. My expertise lies in effectively deploying 
                         machine learning techniques to uncover patterns and derive valuable insights from complex datasets. I am skilled 
                         at translating technical requirements into actionable business specifications, streamlining existing processes, 
@@ -57,7 +57,7 @@
                         stimulating conversations. Let's connect and explore the exciting intersection of data, business, and shared interests.
                         <br>
                         <br>
-                        You can also view my more formal and detailed resume <a href="https://drive.google.com/file/d/1228zLIPSiwyrrJZeNeq0YUa8_O0xoWMS/view?usp=sharing">[here]</a>.
+                        You can also view my more formal and detailed resume <a href="https://drive.google.com/file/d/1MqyU9Rdobpq6h7zftDJNH6GU05SCWKet/view?usp=sharing">[here]</a>.
 
                     </p>
                     <div class="social-icons">
@@ -332,10 +332,11 @@
                               <ul>
                                 <li><b>Languages :</b> Python, SQL, R, HTML/CSS</li>
                                 <li><b>Reporting Tools :</b> Tableau, Power BI, SAS Visual Analytics, Microsoft Excel</li>
-                                <li><b>Libraries :</b> NLTK, Scikit-Learn, SciPy, Pandas, NumPy, Seaborn, TensorFlow</li>
-                                <li><b>Big Data and DW Tools: :</b> MySQL, Oracle DB, PostgreSQL, AWS S3, Athena, Apache Kafka, Google BigQuery</li>
+                                <li><b>Data Warehousing Tools :</b> Snowflake, Databricks, Google BigQuery, Apache Spark, Apache Kafka, AWS Redshift, Dremio, MySQL</li>
+                                <li><b>Libraries and Modules :</b> TensorFlow, Keras, PyTorch, NLTK, Scikit-Learn, OpenCV, Transformers, Langchain</li>
+                                <!-- <li><b>Big Data and DW Tools: :</b> MySQL, Oracle DB, PostgreSQL, AWS S3, Athena, Apache Kafka, Google BigQuery</li> -->
                                 <li><b>Statistics/ML :</b> CART, NLP, Clustering, Sentiment Analysis, Deep Learning, Time Series Analysis</li>
-                                <li><b>Cloud Environment:</b> Amazon Web Services, Google Cloud Platform, Docker, Kubernets, Git</li>
+                                <li><b>Cloud Environment:</b> Amazon Web Services, Google Cloud Platform, Docker, Kubernets, Git, Amazon Sagemaker</li>
                               </ul>
                         </div>
                       </div>
